[package]
name = "dependent_ghost"
version = "0.1.0"
license = "MIT"
description = "An implementation of Matt Noonan's 'Ghosts of Departed Proofs'."
authors = ["Cameron Wong <cam@camdar.io>"]
homepage = "https://kataskeue.com/gdp.pdf"
repository = "https://github.com/CT075/dependent-ghost"
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
